--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 <DOCTYPE !html>
 <html>
 <head>
@@ -22,3 +23,13 @@
 </div>
 </body>
 </html>
+
+
+{% block navbar %}
+    <li class="nav-item">
+		<a class="nav-link" href="/register">Sign Up</a>
+		<a class="nav-link" href="/login">Login</a>
+    </li>
+{% endblock %}
+
+
