--- a/application/blueprints/videoAPI/templates/video/watch.html
+++ b/application/blueprints/videoAPI/templates/video/watch.html
@@ -1,1 +1,12 @@
-<h1>Watch</h1>
+<html>
+    <head>
+        <title>{{title}}</title>
+    </head>
+    <body>
+        <h1>{{title}}</h1>
+        <div>
+            <iframe src="{{source}}"></iframe>
+        </div>
+        <p>{{description}}</p>
+    </body>
+</html>
