Better video display

--- a/application/blueprints/videoAPI/templates/video/watch.html
+++ b/application/blueprints/videoAPI/templates/video/watch.html
@@ -5,7 +5,9 @@
     <body>
         <h1>{{title}}</h1>
         <div>
-            <iframe src="{{source}}"></iframe>
+            <video controls>
+                <source src="{{source}}" type="video/mp4">
+            </video>
         </div>
         <p>{{description}}</p>
     </body>
