--- a/application/blueprints/videoAPI/templates/video/watch.html
+++ b/application/blueprints/videoAPI/templates/video/watch.html
@@ -3,12 +3,15 @@
         <title>{{title}}</title>
     </head>
     <body>
-        <h1>{{title}}</h1>
         <div>
-            <video controls>
-                <source src="{{source}}" type="video/mp4">
-            </video>
+            <div>
+                <video controls>
+                    <source src="{{source}}" type="video/mp4">
+                </video>
+            </div>
+            <div>
+                <p>{{description}}</p>
+            </div>
         </div>
-        <p>{{description}}</p>
     </body>
 </html>
