I forgot to add title again

--- a/application/blueprints/videoAPI/templates/video/watch.html
+++ b/application/blueprints/videoAPI/templates/video/watch.html
@@ -10,6 +10,7 @@
                 </video>
             </div>
             <div>
+                <h1>{{title}}</h1>
                 <p>{{description}}</p>
             </div>
         </div>
