--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -27,7 +27,7 @@
 
 {% block navbar %}
     <li class="nav-item">
-		<a class="nav-link" href="/register">Sign Up</a>
+		<a class="nav-link" href="/login">Sign Up</a>
 		<a class="nav-link" href="/login">Login</a>
     </li>
 {% endblock %}
