--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -2,6 +2,9 @@
 {% block title %}Home{% endblock %}
 
 {% block navbar %}
+<li class="nav-item">
+    <a class="nav-link" href="/video/upload">Upload</a>
+</li>
 <li class="navbar-right">
     <a class="nav-link" href="/logout">Logout</a>
 </li>
