fixed login flash mistake and put it back to dans

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/video/watch">Watch</a>
                   </li>
                   <form>
-                    <input type="text" id="search" class="fadeIn second" name="search" placeholder="Search">
+                    <input type="text" id="Search" class="fadeIn second" name="Search" placeholder="Search">
                     <input type="submit" class="fadeIn third" value="Search" formmethod="post" formaction="/search">
                 </form>
                   {% block navbar %}{% endblock navbar %}
