--- a/application/blueprints/videoAPI/templates/video/watch.html
+++ b/application/blueprints/videoAPI/templates/video/watch.html
@@ -6,7 +6,7 @@
         <div>
             <div>
                 <video controls>
-                    <source src="{{source}}" type="video/mp4">
+                    <source src="{{source}}" type="{{filetype}}">
                 </video>
             </div>
             <div>
