Updated delete to also require video owner username

--- a/application/blueprints/videoAPI/templates/video/watch.html
+++ b/application/blueprints/videoAPI/templates/video/watch.html
@@ -12,6 +12,7 @@
             </div>
             <div>
                 <h1>{{title}}</h1>
+                <h2>{{username}}</h2>
                 <p>{{description}}</p>
             </div>
         </div>
